# gcp_ahead

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  requirements.txt
parameters/greedy/: DSatur.json  RLF.json  adaptive.json  constrained.json  deterministic.json  deterministic_2.json  random.json
parameters/local_search/: partial_col.json  partial_col_optimized.json  partial_ts.json  tabu_bucket.json  tabu_col.json  tabu_col_optimized.json
parameters/mcts/: mcts_greedy_adaptive.json  mcts_greedy_constrained.json  mcts_greedy_deterministic.json  mcts_greedy_dsatur.json  mcts_greedy_random.json  mcts_greedy_rlf.json  mcts_pc.json  mcts_pco.json  mcts_pts.json  mcts_tco.json  mcts_tco_0.005.json  mcts_tco_0.01.json  mcts_ucb.json
parameters/memetic/: ahead_deleter.json  ahead_nn.json  ahead_pursuit.json  ahead_random.json  ahead_roulette.json  ahead_ucb.json  head_pc.json  head_pc_ls_0.005.json  head_pc_ls_0.01.json  head_pc_ls_0.05.json  head_pc_ls_0.1.json  head_pco.json  head_pts.json  head_tco.json  head_tco_ls_0.005.json  head_tco_ls_0.01.json  head_tco_ls_0.05.json  head_tco_ls_0.1.json
scripts/: build_release.sh  jobs_generator.py  one_job.py  one_job_one_run.py  run_with_parallel.sh  run_with_slurm.sh  slurm_ls.sh  slurm_ma.sh  slurm_mcts.sh  slurm_rerun.sh  xlsx_generator.py
src/: main.cpp
src/methods/: GreedyAlgorithm.cpp  GreedyAlgorithm.hpp  LocalSearchAlgorithm.cpp  LocalSearchAlgorithm.hpp  MCTS.cpp  MCTS.hpp  MemeticAlgorithm.cpp  MemeticAlgorithm.hpp  SimulationHelper.cpp  SimulationHelper.hpp  adaptive.cpp  adaptive.hpp  crossover.cpp  crossover.hpp  insertion.cpp  insertion.hpp  neural_network.cpp  neural_network.hpp  selection.cpp  selection.hpp
src/representation/: Graph.cpp  Graph.hpp  Node.cpp  Node.hpp  Parameters.cpp  Parameters.hpp  Solution.cpp  Solution.hpp
src/utils/: parse.cpp  parse.hpp  utils.cpp  utils.hpp
xlsx_files/: gcp_all_greedy.xlsx  gcp_hard_all.xlsx
